Fixes profile spacing upon wrapping w/in rows
Removal of placeholder profiles resulted in a variant number of profiles per .roster-row. This resulted in uneven spacing between the .profile divs when they wrapped inside their respective .roster-row parents in less-wide display environments: each .roster-row is a flex box, and all are stacked inside a grid.

Update removes grid-template-row space allocation from #roster the problem.

Update further evens out the spacing of the .profile elements by removing grid-gap specification from #roster.

--- a/styles/page_styles.css
+++ b/styles/page_styles.css
@@ -874,9 +874,6 @@ a:link {
 
 #roster {
   display: grid;
-
-  grid-gap: .5em;
-  grid-template-rows: 1fr 1fr 1fr;
   grid-template-areas:  "row1"
                         "row2"
                         "row3";
